fix header on mobiles

--- a/app/styles/meow-bootstrap.less
+++ b/app/styles/meow-bootstrap.less
@@ -545,6 +545,11 @@ img.avatar {
     display: inline-block;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAFVBMVEX///+6fD66fD7+tvP/k7D/2u3///8gd+zcAAAAAnRSTlMAsyT7Lw4AAABtSURBVCjPrc7bDcUwCANQVvAKrMAKrOAV2H+EC2nU3qrQr1qxlBzlJfJVgKMjwB3VAZBxzXjNWmCop2SDA6RoVDnDzgSIM2hB/kE6qCP72euOOwSptV/J6AFm62s0QwslurLXTxAAsQZkgPf8AG20SMlgzFqWAAAAAElFTkSuQmCC) no-repeat 22px 2px;
     vertical-align: middle;
+
+    @media (max-width: 481px) {
+      padding: 0 2px;
+      background-position: 2px 2px;
+    }
 }
 
 /* Anonymous checkbox position fix */
